# todoist

./: .gitignore  Makefile  README.md  pyproject.toml
src/todoist/: cli.py  config.py  constants.py  domain.py  domain_tests.py  utils.py
